--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -9,3 +9,5 @@ location: "Casablanca, Morocco"
 ---
 
 I gave a tech talk on Machine Learning where I presented the basics of Machine Learning and Data Science, career and opportunities in this field. In addition, I shared my experience as a #Fulbright #Scholar in the USA 🚀 🇺🇸
+
+[More information here](http://exampleurl.com)
