posts and talks

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -10,4 +10,4 @@ location: "Casablanca, Morocco"
 
 I gave a tech talk on Machine Learning where I presented the basics of Machine Learning and Data Science, career and opportunities in this field. In addition, I shared my experience as a #Fulbright #Scholar in the USA 🚀 🇺🇸
 
-[More information here](http://exampleurl.com)
+[More information here](https://www.linkedin.com/posts/3w-academy-maroc_machinelearning-fulbright-activity-6555025438794625024-pXlV)
