--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -9,7 +9,7 @@ tags:
 ---
 
  In public discourse, AI is being perceived as “something data, something neural networks, and something black unbeatable magic”. We tend to ignore security issues of intelligence-based systems because it’s just too hard to believe that high performant detection system can be fooled with some simplistic tricks”.
- [[Medium](https://medium.com/@chami.soufiane/security-threats-against-machine-learning-based-systems-a-real-concern-2515115c88e4)]
+ [[Medium](http://bit.ly/30PowqR)]
 
 
  <br>
